--- a/website/askahgong/property/.htaccess
+++ b/website/askahgong/property/.htaccess
@@ -2,4 +2,6 @@ RewriteEngine on
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule .* index.php?/$0 [PT,L] 
+RewriteRule .* index.php?/$0 [PT] 
+
+
